--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-requests = "*"
+requests = "==2.25.1"
+asgiref = "==3.3.1"
+certifi = "==2020.12.5"
+chardet = "==4.0.0"
+idna = "==2.10"
+pytz = "==2021.1"
+sqlparse = "==0.4.1"
+urllib3 = "==1.26.4"
+Django = "==3.1.7"
 
 [dev-packages]
 
