--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-requests = "==2.25.1"
+requests = "*"
 asgiref = "==3.3.1"
 certifi = "==2020.12.5"
 chardet = "==4.0.0"
@@ -12,8 +12,13 @@ idna = "==2.10"
 pytz = "==2021.1"
 sqlparse = "==0.4.1"
 urllib3 = "==1.26.4"
-Django = "==3.1.7"
+Django = "*"
 djangorestframework = "*"
+django-cors-headers = "*"
+django-summernote = "*"
+pillow = "*"
+psycopg2 = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
